DELETE /bike/:bikeID
